@@ -1,0 +1,16 @@
+
+#       type (_, _) t = A : ('a, 'a) t | B : string -> ('a, 'b) t
+#           Characters 127-149:
+  ....................................................function
+     | B s -> s
+Warning 8: this pattern-matching is not exhaustive.
+Here is an example of a value that is not matched:
+A
+module M :
+  functor (A : sig module type T end) ->
+    functor (B : sig module type T end) ->
+      sig val f : ((module A.T), (module B.T)) t -> string end
+#   module A : sig module type T = sig  end end
+#   module N : sig val f : ((module A.T), (module A.T)) t -> string end
+#   Exception: Match_failure ("//toplevel//", 7, 52).
+# 
